se sube correccion a titulo en detalle de item factura

--- a/ninja/Views/Invoice/InvoiceDetail.cshtml
+++ b/ninja/Views/Invoice/InvoiceDetail.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ninja.model.Entity.InvoiceDetail
 
 <div>
-    <h4>InvoiceDetail</h4>
+    <h4>Detalle Factura</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
