--- a/ninja/Views/Home/Index.cshtml
+++ b/ninja/Views/Home/Index.cshtml
@@ -3,29 +3,37 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <h1>Facturacion</h1>
+    <p class="lead">Sistema de facturacion echo por Ivan Metta</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Requerimientos Cliente S.A</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+            <b><u>Proyecto ninja.test</u></b>
+
+            Escribir el código necesario para que la prueba 'DeleteInvoice' ejecute correctamente
+            Escribir el código necesario para que la prueba 'UpdateInvoiceDetail' ejecute correctamente
+            Solucionar el bug para que la prueba 'CalculateInvoiceTotalPriceWithTaxes' ejecute correctamente
+
+            <b><u>Proyecto ninja.web</u></b>
+            1.Crear la controller 'InvoiceController.cs' con las siguientes acciones
+            Index
+            Detail
+            New
+            Update
+            Delete
+            2.Crear las 4 vistas que respondan a las 4 acciones creadas en el punto anteriorIndex - Lista todas las facturas en una grilla
+            Detail - Lista el detalle de una factura especifica
+            New - Da de alta una factura, a esta opción se accede desde
+            Index
+            Update - Modifica una factura, a esta opción se accede desde Index
+            Delete - Elimina una factura, a esta opción se accede desde Index
+
+            </b>
+
+<p><a class="btn btn-default" href="/Invoice/Index">Learn more &raquo;</a></p>
     </div>
 </div>
