Se suben ultimos cambios s/ correcciones.

--- a/ninja/Views/Home/Index.cshtml
+++ b/ninja/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>Facturacion</h1>
-    <p class="lead">Sistema de facturacion echo por Ivan Metta</p>
+    <h1>Invoicecion</h1>
+    <p class="lead">Sistema de invoicecion echo por Ivan Metta</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
@@ -25,12 +25,12 @@
             New
             Update
             Delete
-            2.Crear las 4 vistas que respondan a las 4 acciones creadas en el punto anteriorIndex - Lista todas las facturas en una grilla
-            Detail - Lista el detalle de una factura especifica
-            New - Da de alta una factura, a esta opción se accede desde
+            2.Crear las 4 vistas que respondan a las 4 acciones creadas en el punto anteriorIndex - Lista todas las invoices en una grilla
+            Detail - Lista el detalle de una invoice especifica
+            New - Da de alta una invoice, a esta opción se accede desde
             Index
-            Update - Modifica una factura, a esta opción se accede desde Index
-            Delete - Elimina una factura, a esta opción se accede desde Index
+            Update - Modifica una invoice, a esta opción se accede desde Index
+            Delete - Elimina una invoice, a esta opción se accede desde Index
 
             </b>
 
