--- a/ninja/Views/Shared/_Layout.cshtml
+++ b/ninja/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Facturacion", "Index", "Invoice")</li>
+                    <li>@Html.ActionLink("Invoicecion", "Index", "Invoice")</li>
                 </ul>
             </div>
         </div>
