--- a/ninja/Views/Invoice/InvoiceDetail.cshtml
+++ b/ninja/Views/Invoice/InvoiceDetail.cshtml
@@ -1,11 +1,11 @@
-﻿@model ninja.model.Entity.InvoiceDetail
+﻿@model ninja.Models.InvoicesDetailViewModel
 
 <div>
-    <h4>Detalle Factura</h4>
+    <h4>Detalle Invoice</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.Label("Numero Item", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("#Item", htmlAttributes: new { @class = "control-label col-md-2" })
         </dt>
 
         <dd>
@@ -13,7 +13,7 @@
         </dd>
 
         <dt>
-            @Html.Label("Descripcion", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Description", htmlAttributes: new { @class = "control-label col-md-2" })
         </dt>
 
         <dd>
@@ -39,5 +39,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Back", "Edit", new { id = Model.InvoiceId }) |
+    @Html.ActionLink("Back", "Details", new { id = Model.InvoiceId }) |
 </p>
